--- a/css/style.css
+++ b/css/style.css
@@ -8,31 +8,84 @@
 @media screen and (max-width: 767px){
     .container {
         width: 100%;
-        padding: 5px 20px;
     }
+
+    .flex-container {
+      display: flex;
+      flex-wrap: nowrap;
+      background-color: lightslategray;
+      width: fit-content;
+    }
+    
+    .flex-container > div {
+      background-color: #f1f1f1;
+      width: max-content;
+      margin: 10px;
+    }
+    
 }
 /* Tablets and iPads (portrait and landscape) ---------- */
 @media screen and (min-width: 768px) and (max-width: 1023px){
     .container {
-        width: 750px;
-        padding: 5px 20px;
+      width: 95%;
     }
+
+    .flex-container {
+      display: flex;
+      flex-wrap: nowrap;
+      background-color: lightslategray;
+      width: max-content;
+    }
+
+    .flex-container > div {
+      background-color: #f1f1f1;
+      width: max-content;
+      margin: 10px;
+    }
+    
+    
 }
 /* Low resolution desktops and laptops ---------- */
 @media screen and (min-width: 1024px) {
     .container {
         width: 980px;
-        padding: 5px 20px;
     }
+
+    .flex-container {
+      display: flex;
+      flex-wrap: nowrap;
+      background-color: lightslategray;
+      width: max-content;
+    }
+    
+    .flex-container > div {
+      background-color: #f1f1f1;
+      width: max-content;
+      margin: 10px;
+    }
+    
 }
 /* High resolution desktops and laptops ---------- */
 @media screen and (min-width: 1280px) {
     .container {
         width: 1200px;
-        padding: 5px 20px;
     }
+
+    .flex-container {
+      display: flex;
+      flex-wrap: nowrap;
+      background-color: lightslategray;
+      width: fit-content;
+    }
+    
+    .flex-container > div {
+      background-color: #f1f1f1;
+      width: max-content;
+      margin: 10px;
+    }
+    
 }
-.flex-container {
+/* .flex-container {
   display: flex;
   flex-wrap: nowrap;
   background-color: lightslategray;
@@ -43,7 +96,7 @@
   background-color: #f1f1f1;
   width: max-content;
   margin: 10px;
-}
+} */
 
 /*CSS Selector*/
  p {
